# duckling

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.claude/: settings.local.json
benches/: parse.rs
examples/: profile.rs
scripts/: generate_haskell_module_smoke_tests.sh  generate_pending_corpus_tests.sh  update_porting_status.sh
src/: document.rs  engine.rs  lib.rs  locale.rs  pattern.rs  ranking.rs  resolve.rs  stash.rs  testing.rs  types.rs
src/corpus/: mod.rs  time_en.rs
src/dimensions/: mod.rs
src/dimensions/amount_of_money/: ar.rs  bg.rs  ca.rs  en.rs  es.rs  fr.rs  ga.rs  he.rs  hr.rs  id.rs  it.rs  ka.rs  ko.rs  mn.rs  mod.rs  nb.rs  nl.rs  pt.rs  ro.rs  ru.rs  sv.rs  tr.rs  vi.rs  zh.rs
src/dimensions/credit_card_number/: mod.rs  rules.rs
src/dimensions/distance/: bg.rs  ca.rs  cs.rs  de.rs  en.rs  es.rs  fr.rs  ga.rs  hr.rs  it.rs  km.rs  ko.rs  mn.rs  mod.rs  nl.rs  pt.rs  ro.rs  ru.rs  sv.rs  tr.rs  zh.rs
src/dimensions/duration/: ar.rs  bg.rs  ca.rs  de.rs  el.rs  en.rs  es.rs  fr.rs  ga.rs  hi.rs  hu.rs  ja.rs  ka.rs  ko.rs  mn.rs  mod.rs  nb.rs  nl.rs  pl.rs  ro.rs  ru.rs  sv.rs  tr.rs  uk.rs  zh.rs
src/dimensions/email/: de.rs  fr.rs  it.rs  mod.rs  rules.rs
src/lang/: en.rs  mod.rs
src/ranking/: mod.rs  train.rs
src/ranking_classifiers/: ar_xx.json  el_xx.json  en_xx.json  es_xx.json  pt_xx.json  tr_xx.json
tests/: amount_of_money_corpus.rs  credit_card_number_corpus.rs  distance_corpus.rs  duration_corpus.rs  email_corpus.rs  extreme_inputs_regression.rs  numeral_corpus.rs  ordinal_corpus.rs  pending_corpus.rs  pending_haskell_modules.rs  phone_number_corpus.rs  quantity_corpus.rs  temperature_corpus.rs  time_chaos_regression.rs  time_corpus.rs  url_corpus.rs  volume_corpus.rs
tests/haskell_upstream/: PORTING_STATUS.md  pending_corpus.tsv  ported_corpus.tsv  ported_test_modules.tsv  porting_manifest.tsv
(+199 files in other folders)
