[package]
name = "duckling"
version = "0.2.1"
edition = "2021"
description = "A Rust port of Facebook's Duckling library for parsing natural language into structured data"
license = "BSD-3-Clause"
repository = "https://github.com/wafer-inc/duckling"
homepage = "https://github.com/wafer-inc/duckling"
documentation = "https://docs.rs/duckling"
keywords = ["nlp", "parsing", "time", "duckling"]
categories = ["text-processing", "parsing"]

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
smallvec = "1"

[dev-dependencies]
